# crdb-sql-audit

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml
crdb_sql_audit/: audit.py  main.py  rules_engine.py
crdb_sql_audit/rules/: postgres_to_crdb.yaml
notebooks/: demo_crdb_sql_audit.ipynb  demo_crdb_sql_audit_binder.ipynb
rules/: mysql_to_crdb.yaml  oracle_to_crdb.yaml
tests/: test_runner.py
tests/rules/: test_rules.yaml
