[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crdb-sql-audit"
version = "0.1.0"
description = "Analyze PostgreSQL SQL logs for CockroachDB compatibility"
authors = [
    { name = "Virag Tripathi", email = "virag.tripathi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "matplotlib"
]

[project.scripts]
crdb-sql-audit = "crdb_sql_audit.main:main"