[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crdb-sql-audit"
version = "0.2.4"
description = "Analyze PostgreSQL SQL logs for CockroachDB compatibility"
authors = [
    { name = "Virag Tripathi", email = "virag.tripathi@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent"
]
dependencies = [
    "pandas",
    "matplotlib",
    "pyyaml"
]

[project.scripts]
crdb-sql-audit = "crdb_sql_audit.main:main"

[tool.setuptools]
packages = ["crdb_sql_audit"]

[tool.setuptools.package-data]
crdb_sql_audit = ["rules/postgres_to_crdb.yaml", "roach-logo.svg"]
